# bonsai-scheme

./: .travis.yml  README.md
.github/workflows/: ci.yml  test.yml
bash/: minscheme  minscheme.sh
bash/lib/: builtins.sh  env.sh  eval.sh  forms.sh  parser.sh  utils.sh  values.sh
go/: .gitignore  compile.sh  go.mod  run_tests.sh
go/data/: builtins.go  slice.go  value.go
go/eval/: eval.go  forms.go
go/lib/: builtins.go  data.go  env.go  forms.go  parser.go
go/parser/: parser.go
haskell/: .gitignore  compile.sh  minilisp.cabal  minscheme  minscheme.cabal  run_main.sh  run_tests.sh
haskell/app/: Main.hs
haskell/app/MinScheme/: Builtins.hs  Data.hs  Environment.hs  Evaluate.hs  Evaluate.hs-boot  Forms.hs  Parser.hs  StandardEnv.hs
haskell/app/MiniLisp/: Builtins.hs  Data.hs  Environment.hs  Environment.hs-boot  Evaluate.hs  Evaluate.hs-boot  Forms.hs  Forms.hs-boot  Parser.hs  StandardEnv.hs
javascript/: .eslintrc.yml  compile.sh  minscheme  package-lock.json  package.json  run_main.sh  run_tests.sh
javascript/minilisp/: builtins.js  data.js  eval.js  parser.js  stdenv.js
javascript/minscheme/: builtins.js  data.js  forms.js  index.js  parser.js
javascript/src/: builtins.js  eval.js  forms.js  parser.js
python/: minscheme  run_main.sh  run_tests.sh
python/minilisp/: __main__.py  builtins.py  data.py  environments.py  eval.py  forms.py  parser.py  stdenv.py
python/minscheme/: builtins.py  data.py  eval.py  forms.py
reference/: minscheme  run_tests.sh
rust/: Cargo.toml  compile.sh  minilisp  run_tests.sh
rust/src/: builtins.rs  data.rs  environment.rs  error.rs  forms.rs  main.rs  parser.rs
tests/: 1-begin.scm  2-boolean.scm  2-comparison.scm  2-cons.scm  2-equality.scm  2-logical.scm  3-lambda.scm  3-let-star.scm  3-let.scm  3-lexical-scope.scm  4-let-star.scm  4-let.scm  4-letrec.scm  5-cond.scm  5-if.scm  6-set-pair.scm  6-set.scm  9-inf-list.scm  9-sort.scm  arithmetic.scm  define.scm  fib.scm  literal.scm  predicate.scm  run_tests.py  run_tests.sh  set-outer.scm  smoke.scm
typescript/: .eslintrc.yml  .gitignore  compile.sh  minscheme  package-lock.json  package.json  run_main.sh  tsconfig.json
typescript/minscheme/: builtins.ts  data.ts  eval.ts  forms.ts  (+3 more)
(+18 files in other folders)
