name:                minscheme
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nya3jp/bonsai-scheme
-- license:             BSD3
-- license-file:        LICENSE
author:              Shuhei Takahashi
-- maintainer:          example@example.com
copyright:           2018 Shuhei Takahashi
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

executable minscheme
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       MinScheme.Builtins
                     , MinScheme.Data
                     , MinScheme.Environment
                     , MinScheme.Evaluate
                     , MinScheme.Forms
                     , MinScheme.Parser
                     , MinScheme.StandardEnv
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , containers
                     , regex-compat
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nya3jp/bonsai-scheme
